# Agent

./: .env.example  .gitignore  .gitmodules  Cargo.toml  README.md  mcp_config_example.json
frontend/: README.md  index.html  package-lock.json  package.json
frontend/src/: App.css  App.tsx  index.css
frontend/src/api/: client.ts
frontend/src/components/: AgentSteps.css  AgentSteps.tsx  ChatInput.css  ChatInput.tsx  ChatMessage.css  ChatMessage.tsx  McpPanel.tsx  SettingsPanel.css  SettingsPanel.tsx  index.ts
frontend/src/hooks/: useChat.ts
frontend/src/styles/: AgentSteps.css  ChatInput.css  ChatMessage.css  McpPanel.css  SettingsPanel.css
frontend/src/types/: index.ts
mcp_solodit_db/: .env.example  package-lock.json  package.json
mcp_solodit_db/src/: index.ts
src/: agent.rs  config.rs  error.rs  handlers.rs  main.rs  models.rs  openrouter.rs  tools.rs
src/mcp/: connection.rs  manager.rs  mod.rs  protocol.rs  types.rs
