[package]
name = "llm-agent"
version = "0.1.0"
edition = "2021"
description = "LLM Agent backend with OpenRouter integration"

[dependencies]
# Web framework
axum = { version = "0.7", features = ["macros"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP client
reqwest = { version = "0.12", features = ["json", "stream"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Environment and config
dotenvy = "0.15"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
thiserror = "1"
anyhow = "1"

# Async streams
futures = "0.3"
tokio-stream = "0.1"

# UUID for request tracking
uuid = { version = "1", features = ["v4"] }

# Date/time
chrono = "0.4"
